convert number operation to BigDecimal